fix: temporary fix - hardcoded dark mode bg color in dropdwon

--- a/packages/components/src/components/dropdown/dropdown.css
+++ b/packages/components/src/components/dropdown/dropdown.css
@@ -135,6 +135,7 @@ scale-dropdown {
   border-color: var(--border-color-hover);
   background-color: var(--telekom-color-ui-outlined-fill-hovered);
 }
+
 .dropdown:not(.dropdown--disabled).dropdown--status-error
   .input__dropdown:hover {
   border-color: var(--telekom-color-functional-danger-hovered);
@@ -225,4 +226,22 @@ scale-dropdown {
   border-color: var(--border-color-disabled);
   color: var(--color-disabled);
   background: var(--background-disabled);
+}
+
+/*TODO: remove hardcoded values for FF and windows browser (must define system dropdown bg color, 
+see https://github.com/telekom/scale/issues/1018) */
+[data-mode='dark'] .dropdown .input__dropdown {
+  background-color: var(--telekom-color-background-canvas-subtle);
+}
+
+[data-mode='dark']
+  .dropdown:not(.dropdown--disabled):not(.dropdown--status-error)
+  .input__dropdown:hover {
+  background-color: var(--telekom-color-background-canvas-subtle);
+}
+
+[data-mode='dark']
+  .dropdown:not(.dropdown--disabled).dropdown--status-error
+  .input__dropdown:hover {
+  background-color: var(--telekom-color-background-canvas-subtle);
 }
